switching to 'list/all' urls
